Fix SVG logo on Safari

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -189,7 +189,7 @@
       float: left
       svg
         width: 100%
-        height: auto
+        height: 100%
     .branding--content
       float: left
       padding: $base-font-size / 2
